test_suite5/ALAN/test_suite/alan-2022-examples/passing/000270_deriv.alan
source a9r begin leave H(8 = 92) end
